--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
     "name": "registro-mm",
-    "version": "1.0.0",
+    "private": true,
+    "version": "0.1.0",
+    "homepage": "https://charlestpaquino.github.io/RegistroMM/",
     "dependencies": {
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.0",
@@ -35,7 +37,7 @@
     },
     "scripts": {
         "dev": "vite",
-        "build": "vite build",
+        "build": "tsc && vite build",
         "preview": "vite preview"
     }
 }
