--- a/package.json
+++ b/package.json
@@ -24,20 +24,24 @@
         "@types/jquery": "^3.5.32",
         "@types/jquery.transit": "^0.9.33",
         "@types/node": "^22.14.0",
-        "@types/react": "^18.0.28",
-        "@types/react-dom": "^18.0.11",
-        "@vitejs/plugin-react": "^3.1.0",
+        "@types/react": "^18.0.0",
+        "@types/react-dom": "^18.0.0",
+        "@vitejs/plugin-react": "^4.0.0",
         "autoprefixer": "^10.4.21",
         "dotenv": "^16.4.7",
+        "gh-pages": "^6.0.0",
         "postcss": "^8.5.3",
         "tailwindcss": "^4.1.3",
+        "terser": "^5.24.0",
         "ts-node": "^10.9.2",
-        "typescript": "^4.9.5",
-        "vite": "^4.2.0"
+        "typescript": "^5.0.0",
+        "vite": "^4.0.0"
     },
     "scripts": {
         "dev": "vite",
         "build": "tsc && vite build",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d dist"
     }
 }
