--- a/package.json
+++ b/package.json
@@ -11,13 +11,21 @@
         "@mui/icons-material": "^7.0.1",
         "@mui/material": "^7.0.1",
         "@supabase/supabase-js": "^2.49.4",
+        "@types/body-parser": "^1.19.5",
+        "@types/cors": "^2.8.17",
+        "@types/express": "^5.0.1",
+        "@types/react-router-dom": "^5.3.3",
+        "body-parser": "^2.2.0",
         "clsx": "^2.1.1",
+        "cors": "^2.8.5",
+        "express": "^5.1.0",
         "jspdf": "^3.0.1",
         "jspdf-autotable": "^5.0.2",
         "mongodb": "^6.15.0",
         "mongoose": "^8.13.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-router-dom": "^7.5.0",
         "tailwind-merge": "^3.2.0"
     },
     "devDependencies": {
