--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
         "body-parser": "^2.2.0",
         "clsx": "^2.1.1",
         "cors": "^2.8.5",
+        "date-fns": "^4.1.0",
         "express": "^5.1.0",
+        "framer-motion": "^12.6.3",
         "jspdf": "^3.0.1",
         "jspdf-autotable": "^5.0.2",
         "mongodb": "^6.15.0",
